--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5assets/DrillMateMobile.js?SDPAC=1095364970"></script>
+        <script type="text/javascript" src="html5assets/DrillMateMobile.js?UCKZB=196375256"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
