--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5assets/DrillMateMobile.js?PKOAC=1564065794"></script>
+        <script type="text/javascript" src="html5assets/DrillMateMobile.js?YKGAC=1317535348"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
